--- a/react-static-page/src/index.css
+++ b/react-static-page/src/index.css
@@ -11,66 +11,55 @@ body {
     flex-direction: column;
 }
 
-#root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+.img {
+    width: 50px;
+    height: 50px; 
 }
 
 .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #171819;
-}
+    display:flex;
+    gap: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    background-color: #1b1c1d;
+    
 
-h1 {
-    margin-top: 30px;
-    padding-bottom: 10px;
-}
-
-.logo-h1{
-    display: flex;
-    gap: 15px;
-    padding-left: 10px;
-}
-
-
-.nav-h1{
-    font-weight:600;
-    font-size: 30px;
-    color: rgb(80, 212, 241);
-}
-
-.nav-list{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    padding-right: 10px;
 }
 
 .img{
-    width: 35px;
+    padding-top: 15px;
 }
 
-.nav-li{
-    font-size: 1.1rem;
+.nav-h1{
+    font-family: "Inter";
+    color: #61dafb;
 }
 
-.main{
-    padding: 20px;
-    flex: 1;
+.content{
+  display: flex;
+  align-items: end;
 }
 
-.main-li{
-  padding-bottom: 10px;
-  list-style: circle;
+.content-h1{
+    font-family: "Inter";
+    padding-left:40px;
+    padding-top: 40px;
+    font-weight: 600px;
 }
 
-.footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #171819;
-    margin-top: auto;
+.ul{
+    padding-left: 80px;
+    line-height: 24px;
+}
+
+.li{
+    font-family: "Inter";
+    padding-block: 5px;
+
+}
+
+.li::marker{
+    color: #61dafb;
+    font-size: 20px;
 }
