--- a/React-Learning/StatesInReact/src/index.css
+++ b/React-Learning/StatesInReact/src/index.css
@@ -9,7 +9,7 @@ body{
 }
 
 
- /* comment - State1 CSS
+ /* --------------------- comment - State1 CSS
  
  .state1{
   border-radius: 12px;
@@ -35,26 +35,19 @@ button:active{
   transform: scale(0.97);
 }
 
-*/
 
-/* comment - State2 CSS */
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+/* --------------------- comment - State2 CSS 
 
-/* Counter wrapper */
+
 .counter {
-  position: relative;          /* REQUIRED for absolute children */
+  position: relative;         
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 40px;
 }
 
-/* Middle number circle */
+
 .count {
   background-color: rgb(188, 154, 106);
   height: 100px;
@@ -67,13 +60,13 @@ button:active{
   font-weight: bold;
   color: #000;
   position: relative;
-  z-index: 1;                  /* Keeps it above buttons */
+  z-index: 1;                 
   box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 }
 
-/* Shared button styles */
+
 .counter button {
-  position: absolute;          /* Enables overlap */
+  position: absolute;          
   top: 50%;
   transform: translateY(-50%);
   height: 50px;
@@ -93,16 +86,46 @@ button:active{
   transform: translateY(-50%) scale(0.95);
 }
 
-/* Minus button (left) */
+
 .minus {
   margin-top: 40px;
   left: -25px;
   z-index: 2;
 }
 
-/* Plus button (right) */
+
 .plus {
   margin-top: 40px;
   right: -25px;
   z-index: 2;
 }
+
+*/
+
+/* --------------------- comment - State3 CSS */
+
+.state3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.value{
+  background-color: black;
+  color: antiquewhite;
+  border: none;
+  border-radius: 12px;
+  padding: 20px 30px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: transform 150ms ease-out;
+}
+
+.value:active{
+  transform: scale(0.97);
+}
+
+
