--- a/React-Learning/StatesInReact/src/index.css
+++ b/React-Learning/StatesInReact/src/index.css
@@ -102,7 +102,7 @@ button:active{
 
 */
 
-/* --------------------- comment - State3 CSS */
+/* --------------------- comment - State3 CSS 
 
 .state3{
   display: flex;
@@ -129,3 +129,4 @@ button:active{
 }
 
 
+*/
