--- a/React-Learning/StatesInReact/src/index.css
+++ b/React-Learning/StatesInReact/src/index.css
@@ -25,8 +25,9 @@ button:active{
   transform: scale(0.97);
 }
 
+*/
 
-/* --------------------- comment - State2 CSS 
+
 
 
 .counter {
@@ -90,43 +91,12 @@ button:active{
   z-index: 2;
 }
 
-*/
-
-/* --------------------- comment - State3 CSS 
-
-.state3{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.value{
-  background-color: black;
-  color: antiquewhite;
-  border: none;
-  border-radius: 12px;
-  padding: 20px 30px;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  transition: transform 150ms ease-out;
-}
-
-.value:active{
-  transform: scale(0.97);
-}
-
-
-*/
-
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #0C4A6E;
+    background-color: #4a4a4a;
     margin: 0;
     font-family: "Inter", sans-serif;
 }
@@ -181,3 +151,38 @@ main {
     transform: none;
     box-shadow: none;
 }
+
+
+/* --------------------- comment - State3 CSS 
+
+.state3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.value{
+  background-color: black;
+  color: antiquewhite;
+  border: none;
+  border-radius: 12px;
+  padding: 20px 30px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: transform 150ms ease-out;
+}
+
+.value:active{
+  transform: scale(0.97);
+}
+
+
+*/
+
+
+
+
+
